Overflow is now fixed in a better way

--- a/src/component/telemachy.component.css
+++ b/src/component/telemachy.component.css
@@ -1,13 +1,12 @@
 .overlay {
 	position: absolute;
 	background: rgba(0, 0, 0, 0.5);
-	/*pointer-events: none;*/
 	z-index: 9000000;
 	transition: all 0.25s ease;
 }
 .explanation {
 	position: absolute;
-	min-width: 700px;
+	min-width: 400px;
 	z-index: 9000000;
 	transition: all 0.25s ease;
 	border-width: 1px;
